# EmpiricalAnalysis

./: .gitignore  CMakeLists.txt  README.md
include/: project.h
source/: main.cpp  project.cpp
